[gd_scene load_steps=2 format=3 uid="uid://dtmj7abt8k18b"]

[ext_resource type="Script" path="res://text_button_for_table_of_contents.gd" id="1_7j3fk"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -852.0
offset_bottom = -625.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7j3fk")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 295.0
offset_bottom = 23.0

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 300.0
offset_bottom = 23.0

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
